added page for authorized users to access

--- a/authorizedUser.html
+++ b/authorizedUser.html
@@ -42,7 +42,7 @@
 		</div>
 	</div>
 
-	<!-- <div class="panel panel-primary">
+	<div class="panel panel-primary">
 		<div class="panel-heading">Add Train</div>
 		<div class="panel-body" id="panelBody">
 			<div class="form-group">
@@ -63,7 +63,7 @@
 			</div>
 			<button class="btn btn-primary" id='submit' type="submit">Submit</button>
 		</div>
-	</div> -->
+	</div>
 
 </div>
 
