added login and logout buttons

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
 <div class="container">
 	<br>
+	<div><button class="btn btn-primary" id="login">Login</div>
 	<br>
-
 	<div class="panel panel-primary">
 		<div class="panel-heading">Current Train Schedule</div>
 		<div class="panel-body table-responsive">
