added moment.js file, removed authentication code for now, still cant get moment js to do what i want

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </div>
 
 
-
+<script src="assets/javascript/moment.js"></script>
 <script src="assets/javascript/logic.js"></script>
 </body>
 </html>
