--- a/authorizedUser.html
+++ b/authorizedUser.html
@@ -54,12 +54,12 @@
 				<input type="text" class="form-control" id="dest">
 			</div>
 			<div class="form-group">
-				<label for="time">First Train Time (HH:mm - military time)</label>
-				<input type="text" class="form-control" id="time">					
+				<label for="time">First Train Time (Military time)</label>
+				<input type="text" class="form-control" id="time" placeholder="HH:mm">					
 			</div>
 			<div class="form-group">
 				<label for="freq">Frequency (min)</label>
-				<input type="text" class="form-control" id="freq">					
+				<input type="number" class="form-control" id="freq">					
 			</div>
 			<button class="btn btn-primary" id='submit' type="submit">Submit</button>
 		</div>
@@ -68,7 +68,7 @@
 </div>
 
 
-
+<script src="assets/javascript/moment.js"></script>
 <script src="assets/javascript/logic.js"></script>
 </body>
 </html>
