--- a/authorizedUser.html
+++ b/authorizedUser.html
@@ -54,8 +54,8 @@
 				<input type="text" class="form-control" id="dest">
 			</div>
 			<div class="form-group">
-				<label for="time">First Train Time (Military time)</label>
-				<input type="text" class="form-control" id="time" placeholder="HH:mm">					
+				<label for="time">First Train Time</label>
+				<input type="time" class="form-control" id="time" placeholder="HH:mm">					
 			</div>
 			<div class="form-group">
 				<label for="freq">Frequency (min)</label>
