added editable fields, added moment.js functionality

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
+    <script src="https://momentjs.com/downloads/moment.js"></script>    
 </head>
 <body>
 
@@ -33,8 +34,8 @@
 						<th>Train Name</th>
 						<th>Destination</th>
 						<th>Arrival Time</th>
-						<th>Frequency(min)</th>
-						<th>Minutes Away</th>
+						<!-- <th>Frequency(min)</th> -->
+						<th>Time Until Departure</th>
 					</tr>
 				</thead>
 				<tbody></tbody>
