--- a/authorizedUser.html
+++ b/authorizedUser.html
@@ -16,6 +16,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
+    <script src="https://momentjs.com/downloads/moment.js"></script>
 </head>
 <body>
 
@@ -33,8 +34,8 @@
 						<th>Train Name</th>
 						<th>Destination</th>
 						<th>Arrival Time</th>
-						<th>Frequency(min)</th>
-						<th>Minutes Away</th>
+						<!-- <th>Frequency(min)</th> -->
+						<th>Time Until Departure</th>
 					</tr>
 				</thead>
 				<tbody></tbody>
@@ -55,17 +56,34 @@
 			</div>
 			<div class="form-group">
 				<label for="time">First Train Time</label>
-				<input type="time" class="form-control" id="time" placeholder="HH:mm">					
-			</div>
-			<div class="form-group">
-				<label for="freq">Frequency (min)</label>
-				<input type="number" class="form-control" id="freq">					
+				<input type="time" class="form-control" id="time">					
 			</div>
 			<button class="btn btn-primary" id='submit' type="submit">Submit</button>
 		</div>
 	</div>
-
 </div>
+
+<br>
+
+<!-- Hidden Div for updating input fields -->
+<div class="row hide" id="hiddenFields">
+	<div class="col-xs-1"></div>
+	<div class="col-xs-3">
+	  <input type="text" class="form-control" id="editedName" placeholder="Train Name" required>
+	</div>
+    <div class="col-xs-3">
+      <input type="text" class="form-control" id="editedDest" placeholder="Destination" required>
+    </div>
+    <div class="col-xs-3">
+      <input type="time" class="form-control" id="editedTime" required>
+    </div>
+    <div class="col-xs-1">
+    	<button class="btn btn-success glyphicon" id="editedSubmit">&#xe013;</button>
+    </div>
+    <div class="col-xs-1"></div>
+</div>
+
+
 
 
 <script src="assets/javascript/moment.js"></script>
